# BabaYagaNLO

./: .gitattributes  ALPHA.F  Makefile  README  README.md  Rteubner.F  commonmain.F  cuts.F  dalhadshigh17.F  dalhadslow17.F  dalhadt17.F  dalhadthigh17.F  distributions.F  driver_gen_events.F  ffpi.F  gen_events.F  hadr5n09.F  hadr5n12.F  hadr5n16.F  hadr5n17.F  hadr5x23.F  hard_ampl.F  initcloseby.F  input_rad  interface.F  intpl.F  loops.F  main.F  mapmomenta.F  matrix_model.F  mtx_eeenudbb.F  muemuegg-plus.f  muemuegg.F  pent.F  phasespace.F  prm.f  recola_int.F  routines.F  sampling.F  shared.F  (+5 more)
LoopTools-2.16-clean/src/D/: D0funcC.F  ffRn.F  ffS2.F  ffS3n.F  ffd0c.F  ffdel4.F  ffxd0m0.F
LoopTools-2.16-clean/src/E/: Eget.F
LoopTools-2.16-clean/src/util/: ff2dl2.F  ffabcd.F  ffcrr.F  ffcxs4.F  ffdcxs.F  ini.F
LoopTools-2.16/src/B/: BcoeffFF.F  ffcb0.F  ffcb2p.F  ffcdb0.F  ffcel2.F  ffxb2p.F  ffxdb1.F
LoopTools-2.16/src/C/: ffcc0.F  ffdxc0.F  ffxc0.F  ffxc0i.F  ffxc0p0.F
LoopTools-2.16/src/D/: D0func.F  ffTn.F  ffxd0h.F  ffxd0i.F
LoopTools-2.16/src/E/: Ecoeffa.F  ffdel5.F
LoopTools-2.16/src/frontend/: lt.F
LoopTools-2.16/src/util/: auxCD.F  ffcli2.F  ffcxr.F  fftran.F  solve.F
collier/COLLIER-1.2.9/: makefile_basic
collier/COLLIER-1.2.9-clean/: CMakeLists.txt
collier/COLLIER-1.2.9-clean/demos/: demo.f90  democache.f90
collier/COLLIER-1.2.9-clean/src/: COLLIER.F90  collier_global.F90  collier_tensors.F90
collier/COLLIER-1.2.9/manual/: collier.tex  collier_manual-1.2.9.tex
eerad/born/: ampTreeFSRsSquared.F  ampTreeFSRtSquared.F  ampTreeINTsSquared.F  ampTreeINTtSquared.F  ampTreeINTts1.F  ampTreeINTts2.F  ampTreeINTts3.F  ampTreeINTts4.F  ampTreeISRsSquared.F  ampTreeISRtSquared.F
eerad/hard/: diagram10_1.F  diagram10_10.F  diagram10_11.F  diagram10_12.F  diagram10_13.F  diagram10_14.F  diagram10_15.F  diagram10_16.F  diagram10_17.F  diagram10_18.F  diagram10_19.F  diagram10_2.F  diagram10_20.F  diagram10_3.F  diagram10_4.F  diagram10_5.F  diagram10_6.F  diagram10_7.F  diagram10_8.F  diagram10_9.F  diagram11_1.F  diagram11_10.F  diagram11_11.F  diagram11_12.F  diagram11_13.F  diagram11_14.F  diagram11_15.F  diagram11_16.F  diagram11_17.F  diagram11_18.F  diagram11_19.F  diagram11_2.F  diagram11_20.F  diagram11_3.F  diagram11_4.F  diagram11_5.F  diagram11_6.F  diagram11_7.F  diagram11_8.F  diagram11_9.F  (+360 more)
form/: borngg.F  formme.F  formmemm.F
mumurad/Born/: Born.F  BornFSR.F  BornIFI.F  BornISR.f
mumurad/Virtual/: Routing1.F  Routing2.F  Routing3.F  Routing4.F  Routing5.F
mumurad/Virtual/box_fsr_fsr/: Virtual_1.F  Virtual_2.F  Virtual_3.F  Virtual_4.F
mumurad/Virtual/box_fsr_isr/: Virtual_1.F  Virtual_2.F  Virtual_3.F  Virtual_4.F
mumurad/Virtual/box_isr_fsr/: Virtual_1.F  Virtual_2.F  Virtual_3.F  Virtual_4.F
mumurad/Virtual/box_isr_isr/: Virtual_1.F  Virtual_2.F  Virtual_3.F  Virtual_4.F
mumurad/Virtual/fsr_fsr/: CTm_1.F  CTm_2.F  Virtual_1.F  Virtual_2.F  Virtual_3.F  Virtual_4.F  Virtual_5.F  Virtual_6.F  Virtual_7.F  Virtual_8.F
mumurad/Virtual/fsr_isr/: CTm_1.F  CTm_2.F  Virtual_1.F  Virtual_2.F  Virtual_3.F  Virtual_4.F  Virtual_5.F  Virtual_6.F  Virtual_7.F  Virtual_8.F
mumurad/Virtual/isr_fsr/: CTm_1.F  CTm_2.F  Virtual_1.F  Virtual_2.F  Virtual_3.F  Virtual_4.F  Virtual_5.F  Virtual_6.F  Virtual_7.F  Virtual_8.F
mumurad/Virtual/isr_isr/: CTm_1.F  CTm_2.F  Virtual_1.F  Virtual_2.F  Virtual_3.F  Virtual_4.F  Virtual_5.F  Virtual_6.F  Virtual_7.F  Virtual_8.F
mumurad/Virtual/mixed_fsrisr/: Virtual_1.F  Virtual_2.F
mumurad/Virtual/mixed_isrfsr/: Virtual_1.F  (+1 more)
mumurad/Virtual_new/: boxisrfsr.f  boxisrisr.f  isrfsr.f  isrisr.f  mixedisr_fsr.f
mumurad/hard/: diagram10_10.f  diagram10_11.f  diagram10_12.f  diagram10_13.f  diagram10_14.f  diagram10_15.f  diagram10_16.f  diagram10_17.f  diagram10_18.f  diagram10_19.f  diagram10_20.f  diagram11_11.f  diagram11_12.f  diagram11_13.f  diagram11_14.f  diagram11_15.f  diagram11_16.f  diagram11_17.f  diagram11_18.f  diagram11_19.f  diagram11_20.f  diagram12_12.f  diagram12_13.f  diagram12_14.f  diagram12_15.f  diagram12_16.f  diagram12_17.f  diagram12_18.f  diagram12_19.f  diagram12_20.f  diagram13_13.f  diagram13_14.f  diagram13_15.f  diagram13_16.f  diagram13_17.f  diagram13_18.f  diagram13_19.f  diagram13_20.f  diagram14_14.f  diagram14_15.f  (+170 more)
pions/: C0exp.F  CTsPhmass.F  OSnotexp.F  Pionanal.F  RealFSR.F  RealISR.F  RealISRFSR.F  VirtBox.F  VirtBoxCrossdiv.F  VirtBoxSquarediv.F  VirtBoxTdiv.F  VirtBoxdiv.F  VirtCTPhoton.F  VirtCTPion.F  VirtCTelectron.F  VirtEl.F  VirtEldiv.F  VirtEldiv2.F  VirtEldiv_old.F  VirtPh.F  VirtPhdiv.F  VirtPi.F  VirtPidiv.F  VirtualBox.F  ampRealHard.F
pipirad/Born/: ampBornFSR.F  ampBornIFI.F  ampBornISR.F
pipirad/Virtual_new/: boxfsr.f  boxisr.f  isrfsr.f  isrisr.f  mixedfsrisr_fsr.f  mixedfsrisr_isr.f  mixedisrfsr_fsr.f  mixedisrfsr_isr.f  pent1_4pt.f  pent2_4pt.f  pent3_4pt.f  pent3_complete_fsr.f  pent3_complete_isr.f  pent4_4pt.f  purefsrfsr.f  purefsrisr.f  triangfsr.f  triangisr.f
pipirad/hard/: diagram10_10.F  diagram10_11.F  diagram10_12.F  diagram10_13.F  diagram10_14.F  diagram10_15.F  diagram10_16.F  diagram10_17.F  diagram10_18.F  diagram10_19.F  diagram10_20.F  diagram10_21.F  diagram10_22.F  diagram10_23.F  diagram10_24.F  diagram10_25.F  diagram10_26.F  diagram10_27.F  diagram10_28.F  diagram10_29.F  diagram10_30.F  diagram11_11.F  diagram11_12.F  diagram11_13.F  diagram11_14.F  diagram11_15.F  diagram11_16.F  diagram11_17.F  diagram11_18.F  diagram11_19.F  diagram11_20.F  diagram11_21.F  diagram11_22.F  diagram11_23.F  diagram11_24.F  diagram11_25.F  diagram11_26.F  diagram11_27.F  diagram11_28.F  diagram11_29.F  (+426 more)
recolas/recola-1.5.0-clean/: CHANGELOG  CMakeLists.txt  README.md
recolas/recola-1.5.0-clean/demos/: demo0_rcl.f90  demo1_rcl.f90  demo_tt_helsel_rcl.f90  run
recolas/recola-1.5.0-clean/include/: recola_version.h
recolas/recola-1.5.0-clean/tests/: CMakeLists.txt  twoTOfour.f90  twoTOfour_all.f90
recolas/recola-1.5.0/src/: CMakeLists.txt
recolas/recola-1.5.0/src/internal/: globals_rcl.f90  rambo.f90  ranlux.F
(+233 files in other folders)
